# chess

./: .gitignore  .pre-commit-config.yaml  README.md  poetry.toml  pyproject.toml  pytest.ini
core/tests/: test_sample.py
