[tool.poetry]
name = "chess-game"
version = "0.1.0"
description = ""
authors = ["Dain <dain@shoeprize.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.13"
black = "^24.4.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
